--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -3,8 +3,16 @@
 @tailwind utilities;
 
 @layer components {
+  .btn {
+    @apply rounded-lg px-3 bg-gray-200 inline-block font-medium;
+  }
+
   .btn-primary {
     @apply rounded-lg py-3 px-6 bg-red-600 hover:bg-red-500 text-white font-medium;
+  }
+
+  .item-container {
+    @apply flex justify-between items-center p-4 my-4 shadow-md shadow-red-300 rounded-xl
   }
 }
 
