--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,14 +1,13 @@
 <%= turbo_frame_tag quote do %>
-  <div class="flex justify-between items-center p-4 my-4 shadow-md shadow-red-300 rounded-xl">
+  <div class="item-container">
     <div class="text-base font-medium text-black">  
       <%= link_to quote.name, quote_path(quote), data: { turbo_frame: "_top" } %>
     </div>
 
-    <% if action_name != "show" %>
     <div>
-      <%= link_to 'Delete', quote_path(quote), method: :delete, class: "rounded-lg bg-gray-100 inline-block font-medium" %>
-      <%= link_to 'Edit', edit_quote_path(quote), class: "rounded-lg  bg-gray-100 inline-block font-medium" %>
+      <%= link_to 'Delete', quote_url(quote), data: { "turbo-method": :delete }, class: "btn" %>
+      <%= link_to 'Edit', edit_quote_path(quote), class: "btn" %>
     </div>
-    <% end %>
+
   </div>
 <% end %>
