--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -3,12 +3,14 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <%= turbo_frame_tag "first_turbo_frame" do %>
-    <div class="flex justify-between items-center">
-      <h1 class="font-bold text-4xl">Quotes</h1>
-      <%= link_to 'Add quote', new_quote_path, class: "btn-primary" %>
-    </div>
-  <% end %>
+  <div class="flex justify-between items-center">
+    <h1 class="font-bold text-4xl">Quotes</h1>
+    <%= link_to 'Add quote', new_quote_path, class: "btn-primary", data: { turbo_frame: dom_id(Quote.new) } %>
+  </div>
 
-  <%= render @quotes %>
+  <%= turbo_frame_tag Quote.new %>
+
+  <%= turbo_frame_tag "quotes" do %>
+    <%= render @quotes %>
+  <% end %>
 </div>
