--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -2,7 +2,7 @@
   <%= link_to sanitize("&larr; Back to quotes"), quotes_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   <h1 class="font-bold text-4xl">New quote</h1>
 
-  <%= turbo_frame_tag "second_frame" do %>
+  <%= turbo_frame_tag @quote do %>
     <%= render "form", quote: @quote %>
   <% end %>
 </div>
