--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,9 +11,34 @@
     @apply rounded-lg py-3 px-6 bg-red-600 hover:bg-red-500 text-white font-medium;
   }
 
+  .page-container {
+    @apply w-full px-2 mx-auto
+  }
+
+  .btn--dark {
+    @apply bg-blue-600 hover:bg-blue-500 text-white
+  }
+
   .item-container {
     @apply flex justify-between items-center p-4 my-4 shadow-md shadow-red-300 rounded-xl
   }
+
+  .navbar {
+    @apply flex items-center shadow-md p-4 mb-6
+  }
+
+  .navbar__brand {
+    @apply font-bold text-lg ml-auto mr-2 text-stone-500
+  }
+
+  .navbar__name {
+    @apply font-bold ml-auto mr-2 text-stone-500
+  }
+
+  .navbar__right {
+    @apply ml-auto
+  }
+  
 }
 
 .turbo-progress-bar {
