--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -8,7 +8,7 @@
     <%= link_to 'Add quote', new_quote_path, class: "btn-primary", data: { turbo_frame: dom_id(Quote.new) } %>
   </div>
 
-  <%= turbo_stream_from "quotes" %>
+  <%= turbo_stream_from current_company, "quotes" %>
 
   <%= turbo_frame_tag Quote.new %>
 
